# orm_and_migrations

./: Dockerfile  alembic.ini  dump-test.sql  pyproject.toml
alembic/: env.py
alembic/versions/: 173191f8e501_remove_name_unique.py  6402bffbe821_remove_students_phone.py  7392bdbf73d6_init.py  906d04360a67_add_students_phone.py
orm_and_migrations/: crud.py  main.py  models.py  my_select.py  my_select_additional.py  seed.py
