[tool.poetry]
name = "orm-and-migrations"
version = "0.1.0"
description = ""
authors = ["KondratovaLudmila <137877876+KondratovaLudmila@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.23"
alembic = "^1.13.0"
psycopg2 = "^2.9.9"
faker = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
